# huffman-coding

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ci-extra/: build.sh
huffman-lib/: CMakeLists.txt  consts.h
huffman-lib/Byte-stream/: byte_stream.cpp  byte_stream.h
huffman-lib/Compressors/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h
huffman-lib/IO/: fiwrapper.cpp  fiwrapper.h  fowrapper.cpp  fowrapper.h
huffman-lib/Tree/: tree.cpp  tree.h
huffman-tool/: huffman_tool.cpp
unit-tests/: CMakeLists.txt  io_tests.cpp  test_utils.cpp  test_utils.h  tree_tests.cpp  wrappers_tests.cpp
unit-tests/data/: big.txt  in1.txt  in_chinese.txt  my_ext.hahahuffman
